# Volatility-Breakout-Bot

./: .env  .env.example  README.md  eod_rebalance.py  ibkr_exec.py  pyproject.toml
broker/: recon.py
config/: default.yaml
config/data/: polygon.yaml  vobreakout.yaml
config/strategy/: vobreakout.yaml
config/venues/: ibkr.yaml
src/apps/: eod_rebalance.py  report.py
src/broker/: fx.py  ibkr_client.py  ibkr_exec.py  reconciliation.py
src/config/: default.yaml
src/config/venues/: ibkr.yaml
src/core/: config.py  log.py  storage.py  timeutils.py  types.py
src/data/: polygon.py  polygon.yaml  universe.py
src/research/: backtest.py  metric.py  metrics.py
src/strategy/: pipeline.py  portfolio.py  vobreakout.py  vobreakout.yaml
test/: test_smoke.py
