[tool.poetry]
name = "volatility-breakout-bot"
version = "0.1.0"
description = "Aggressive, risk-managed volatility breakout bot for US equities via IBKR"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2"
numpy = "^2.0"
pydantic = "^2.7"
ib-insync = "^0.9.86"
python-dotenv = "^1.0"
PyYAML = "^6.0"
loguru = "^0.7"
rich = "^13.7"
httpx = "^0.27"
pyarrow = "^16.0"
duckdb = "^1.0"
apscheduler = "^3.10"
pandas-market-calendars = "^4.4"
typer = {extras=["all"], version = "^0.12"}
optuna = "^3.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5"
black = "^24.4"
mypy = "^1.10"
pytest = "^8.2"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
check_untyped_defs = true
